# genetic-algorithm

./: CMakeLists.txt  calculator.py  comparison_170.csv  crossover_170.csv  crossover_403.csv  crossover_47.csv  main.py  mutation_ftv170.csv  mutation_ftv47.csv  mutation_rbg403.csv  plot.py  population_ftv170.csv  population_ftv47.csv  population_rbg403.csv
population/: ftv170.xml_1000_ORDERED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv170.xml_1000_ORDERED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv170.xml_1000_PARTIALLY_MAPPED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv170.xml_1000_PARTIALLY_MAPPED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv170.xml_100_ORDERED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv170.xml_100_ORDERED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv170.xml_100_PARTIALLY_MAPPED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv170.xml_100_PARTIALLY_MAPPED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv170.xml_5000_ORDERED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv170.xml_5000_ORDERED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv170.xml_5000_PARTIALLY_MAPPED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv170.xml_5000_PARTIALLY_MAPPED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv47.xml_1000_ORDERED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv47.xml_1000_ORDERED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv47.xml_1000_PARTIALLY_MAPPED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv47.xml_1000_PARTIALLY_MAPPED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv47.xml_100_ORDERED_CROSSOVER_DISPLACEMENT_MUTATION.csv  ftv47.xml_100_ORDERED_CROSSOVER_SCRAMBLE_MUTATION.csv  ftv47.xml_100_PARTIALLY_MAPPED_CROSSOVER_DISPLACEMENT_MUTATION.csv  (+17 more)
results/: ftv170.txt  ftv47.txt  (+2 more)
(+62 files in other folders)
